# finbot

./: .commitlintrc.yaml  .coveragerc  .dockerignore  .git-changelog.toml  .gitignore  .pre-commit-config.yaml  .trivyignore.example  404.html  AGENTS.md  CHANGELOG.md  CHANGELOG_GENERATED.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  UPDATE_RUFF_INSTRUCTIONS.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-heavy.yml  ci.yml  dependabot-auto-merge.yml  docker-security-monitor.yml  docs.yml  publish-testpypi.yml  release.yml  scheduled-update.yml  scorecard.yml
api/: index.html
api/cli/: index.html
api/config/: index.html
api/constants/: index.html
api/dashboard/: index.html
benchmarks/: README.md  benchmark_dca_optimizer.py  benchmark_fund_simulator.py  index.html
changelog/: index.html
config/: __init__.py  _logging_utils.py  api_key_manager.py  base_config.py  development.yaml  development_config.py  logger_config.py  logging_config.py  production.yaml  production_config.py  project_config.py  settings.yaml  settings_accessors.py  staging_config.py  testing_config.py
constants/: api_constants.py  app_constants.py  config_constants.py  data_constants.py  db_constants.py  error_constants.py  host_constants.py  logging_constants.py  message_constants.py  networking_constants.py  path_constants.py  security_constants.py  test_constants.py  ui_constants.py
constants/tracked_collections/: _utils.py  merged_funds.csv  tracked_fred.csv  tracked_fred.py  tracked_funds.csv  tracked_funds.py
contributing/: index.html
docs/: DEPENDABOT_GUIDE.md  METRICS.md  accessibility.md  benchmarks.md  implementation_summary_priority_5.2.md  implementation_summary_priority_5.3.md  implementation_summary_priority_5.3_item13.md  implementation_summary_priority_5.3_item16.md  implementation_summary_priority_5.3_item17.md  implementation_summary_priority_5.3_item18.md  implementation_summary_priority_5.4_item19.md  limitations.md  session_summary_2026-02-12.md
docs/adr/: ADR-001-consolidate-three-repos.md  ADR-002-add-cli-interface.md  ADR-003-add-mkdocs-documentation.md  ADR-004-consolidate-package-layout.md  ADR-005-adapter-first-backtesting-live-readiness.md  ADR-006-execution-system-architecture.md  ADR-007-checkpoint-recovery-design.md  ADR-008-risk-management-integration.md  ADR-009-latency-simulation-approach.md  ADR-010-cost-models-corporate-actions.md  ADR-011-nautilus-decision.md  ADR-012-ruff-scope-for-repository-baseline.md  ADR-013-factor-analytics-design.md  ADR-014-runtime-surfaces-and-image-specific-dependencies.md  ADR-015-nextjs-frontend-completion.md  ADR-016-zensical-docs-platform.md
docs/applications/: README.md  canmeds-reflection.md  finbot-portfolio-summary.md  impact-statement.md  lessons-learned.md
docs/blog/: backtesting-engines-compared.md  health-economics-part1-qaly.md  health-economics-part2-cea.md  health-economics-part3-optimization.md  why-i-built-finbot.md
docs/ethics/: responsible-use.md
docs/guidelines/: backtesting-contract-schema-versioning.md  documentation-guidelines.md  roadmap-process.md  testing-guidelines.md
docs/guides/: RELEASE-QUICK-REFERENCE.md  TESTPYPI-SETUP.md  audit-logging-guide.md  audit-trails.md  changelog-generation.md  choosing-backtest-engine.md  conventional-commits-quick-reference.md  conventional-commits-rewrite-guide.md  data-quality-guide.md  docker-security-quick-reference.md  docker-security-scanning.md  faq.md  github-actions-sha-pinning.md  github-pages-docs-deploy-runbook.md  media-artifact-production-runbook.md  mypy-strict-module-tracker.md  nautilus-migration-guide.md  pre-commit-hooks-usage.md  publishing-to-testpypi.md  release-example.md  release-process.md  release-workflow-summary.md  scheduled-ci-setup.md  stable-baseline-restart-guide.md  testpypi-closure-checklist.md  testpypi-quick-reference.md  type-safety-improvement-guide.md  updating-performance-baseline.md
docs/planning/: IMPLEMENTATION_GUIDE_0.4.md  IMPLEMENTATION_PLAN_6.1_E6_EXECUTION_READY.md  IMPLEMENTATION_PLAN_8.0_PRIORITY5_CLOSEOUT_AND_TYPE_HARDENING.md  IMPLEMENTATION_PLAN_8.5_E6_NATIVE_ONLY_VALUATION_PARITY_CLOSURE.md  backtesting-live-readiness-backlog.md  backtesting-live-readiness-implementation-plan.md  documentation-update-plan.md  e3-t3-walkforward-regime-implementation-plan.md  e4-t3-batch-observability-implementation-plan.md  e6-nautilus-pilot-implementation-plan.md  e6-t1-implementation-guide.md  epic-e3-fidelity-improvements-plan.md  golden-strategies-and-datasets.md  mypy-phase1-audit-report.md  parity-tolerance-spec.md  performance-regression-testing-implementation.md  priority-5-6-completion-status.md  priority-7-batch2-implementation-plan.md  priority-7-implementation-plan.md  priority-7-overview.md  priority-7-status-refresh-2026-02-20.md  roadmap.md  stricter-mypy-implementation-plan.md  test-coverage-expansion-implementation-plan.md  test-coverage-phase1-datetime-completion-summary.md
docs/research/: 2026-02-18-testfol-portfolio-visualizer-feature-analysis.md  (+10 more)
docs_site/: README.md  benchmarks.md  changelog.md  contributing.md  index.md
finbot/: exceptions.py
notebooks/: 01_fund_simulation_demo.ipynb  02_dca_optimization_results.ipynb  03_backtest_strategy_comparison.ipynb  04_monte_carlo_risk_analysis.ipynb  05_bond_ladder_analysis.ipynb  06_health_economics_demo.ipynb  README.md  corporate_actions_and_missing_data_demo.ipynb  cost_model_examples.ipynb
research/: index.html
scripts/: generate_backtesting_baseline.py  generate_changelog.sh  run_docker_security_scan.sh  test_nautilus_backtest.py  test_nautilus_install.py  test_release_workflow.sh  test_testpypi_workflow.sh  update_daily.py  verify_testpypi_publication.py
search/: search_index.json
tests/: conftest.py
web/: Dockerfile.backend  Dockerfile.frontend  README.md
(+857 files in other folders)
