[tool.poetry]
name = "finbot"
version = "0.1.0"
description = "Financial data collection, simulation, and backtesting platform"
authors = ["Jeremy Dawson <jeremyjdawson@gmail.com>"]
readme = "README.md"
packages = [
    { include = "finbot" },
    { include = "config" },
    { include = "constants" },
    { include = "libs" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pandas = "^2.1.3"
numpy = "^1.26.0"
numpy-financial = "^1.0.0"
scipy = "^1.11.0"
requests = "^2.31.0"
yfinance = "^0.2.33"
backtrader = "^1.9.78.123"
quantstats = "^0.0.62"
pyportfolioopt = "^1.5.5"
pyarrow = ">=14.0.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"
pandas-datareader = "^0.10.0"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
zstandard = ">=0.22.0"
httpx = "^0.26.0"
dynaconf = "^3.2.4"
limits = "^3.7.0"
pillow = "^10.1.0"
jupyter = "^1.0.0"
prettytable = "^3.9.0"
google-auth = "^2.26.2"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.113.0"
nasdaq-data-link = "^1.0.4"
pywavelets = "^1.5.0"
ruptures = "^1.1.9"
filterpy = "^1.4.5"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
click = "^8.1.7"

[tool.poetry.scripts]
finbot = "finbot.cli.main:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
mypy = "^1.7.1"
ruff = "^0.11.0"
pytest = "^7.4.3"
bandit = "^1.7.6"
ssort = "^0.11.6"
pyupgrade = "^3.15.0"
types-python-dateutil = "^2.8.19.14"
types-requests = "^2.31.0.10"
pandas-stubs = "^2.1.1.230928"
types-tqdm = "^4.66.0.5"
types-beautifulsoup4 = "^4.12.0.20240106"
google-api-python-client-stubs = "^1.23.0"
types-seaborn = "^0.13.1.20240115"
pytest-cov = "^7.0.0"

[tool.ruff]
respect-gitignore = true
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "venv", ".venv", "*.egg-info",
    "__pycache__",
]
line-length = 120
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Rule categories:
# E/F: pycodestyle errors and pyflakes
# UP: pyupgrade (modern Python idioms)
# B: flake8-bugbear (likely bugs and design problems)
# SIM: flake8-simplify (simplification suggestions)
# I: isort (import sorting)
# C901: mccabe complexity
# N: pep8-naming (naming conventions)
# A: flake8-builtins (shadowing builtins)
# C4: flake8-comprehensions (better comprehensions)
# RUF: ruff-specific rules
# LOG: flake8-logging (logging best practices)
# PERF: perflint (performance anti-patterns)
select = ["E", "F", "UP", "B", "SIM", "I", "C901", "N", "A", "C4", "RUF", "LOG", "PERF"]
ignore = []
extend-ignore = ["E501"]  # Line length handled by line-length setting
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas_datareader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backtrader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.oauth2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ruptures.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "filterpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dynaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "quantstats.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy_financial.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyportfolioopt.*"
ignore_missing_imports = true

[tool.mypy]
python_version = "3.11"
mypy_path = "/home/jer/localsync/finbot"
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "./tests/*.py", "*/test_*.py", "*/*_test.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
