[project]
name = "finbot"
version = "1.0.0"
description = "Financial data collection, simulation, and backtesting platform"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [
    {name = "Jeremy Dawson", email = "jeremyjdawson@gmail.com"}
]
keywords = ["finance", "backtesting", "simulation", "quantitative", "trading", "portfolio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "pandas>=2.1.3,<3",
    "numpy>=1.26.0,<2",
    "numpy-financial>=1.0.0,<2",
    "scipy>=1.11.0,<2",
    "requests>=2.31.0,<3",
    "yfinance>=0.2.33,<0.3",
    "backtrader>=1.9.78.123,<2",
    "quantstats>=0.0.81,<1",
    "pyportfolioopt>=1.5.5,<2",
    "pyarrow>=14.0.1",
    "matplotlib>=3.8.2,<4",
    "seaborn>=0.13.0,<0.14",
    "plotly>=5.18.0,<6",
    "tqdm>=4.66.1,<5",
    "scikit-learn>=1.3.2,<2",
    "statsmodels>=0.14.1,<0.15",
    "pandas-datareader>=0.10.0,<0.11",
    "selenium>=4.16.0,<5",
    "webdriver-manager>=4.0.1,<5",
    "openpyxl>=3.1.2,<4",
    "xlrd>=2.0.1,<3",
    "zstandard>=0.22.0",
    "httpx>=0.28.1,<0.29",
    "dynaconf>=3.2.4,<4",
    "limits>=5.8.0,<6",
    "pillow>=12.1.0,<13",
    "jupyter>=1.0.0,<2",
    "prettytable>=3.9.0,<4",
    "google-auth>=2.26.2,<3",
    "google-auth-oauthlib>=1.2.0,<2",
    "google-auth-httplib2>=0.3.0,<0.4",
    "google-api-python-client>=2.113.0,<3",
    "nasdaq-data-link>=1.0.4,<2",
    "pywavelets>=1.5.0,<2",
    "ruptures>=1.1.9,<2",
    "filterpy>=1.4.5,<2",
    "beautifulsoup4>=4.12.2,<5",
    "python-dotenv>=1.0.0,<2",
    "click>=8.1.7,<9",
    "streamlit>=1.40,<2",
    "nautilus-trader>=1.222.0,<2",
]

[project.urls]
Homepage = "https://github.com/jerdaw/finbot"
Repository = "https://github.com/jerdaw/finbot"
Issues = "https://github.com/jerdaw/finbot/issues"
Documentation = "https://github.com/jerdaw/finbot/blob/main/README.md"

[project.scripts]
finbot = "finbot.cli.main:cli"

[dependency-groups]
dev = [
    "pre-commit>=3.6.0,<5",
    "mypy>=1.7.1,<2",
    "ruff>=0.15.0,<0.16",
    "pytest>=9.0.2,<10",
    "hypothesis>=6.148.2,<7",
    "bandit>=1.7.6,<2",
    "ssort>=0.16.0,<0.17",
    "pyupgrade>=3.15.0,<4",
    "types-python-dateutil>=2.8.19.14,<3",
    "types-requests>=2.31.0.10,<3",
    "pandas-stubs>=2.1.1.230928,<3",
    "types-tqdm>=4.66.0.5,<5",
    "types-beautifulsoup4>=4.12.0.20240106,<5",
    "google-api-python-client-stubs>=1.23.0,<2",
    "types-seaborn>=0.13.1.20240115,<1",
    "pytest-cov>=7.0.0,<8",
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.49,<10",
    "mkdocstrings[python]>=0.27.0,<2",
    "types-psutil>=7.2.2.20260130,<8",
    "interrogate>=1.7.0",
    "pip-licenses>=5.5.1,<6",
    "git-changelog>=2.5.2,<3",
]

[tool.ruff]
respect-gitignore = true
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build", "buck-out",
    "build", "dist", "node_modules", "notebooks", "venv", ".venv", "*.egg-info",
    "__pycache__", "web/frontend",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Rule categories:
# E/F: pycodestyle errors and pyflakes
# UP: pyupgrade (modern Python idioms)
# B: flake8-bugbear (likely bugs and design problems)
# SIM: flake8-simplify (simplification suggestions)
# I: isort (import sorting)
# C901: mccabe complexity
# N: pep8-naming (naming conventions)
# A: flake8-builtins (shadowing builtins)
# C4: flake8-comprehensions (better comprehensions)
# RUF: ruff-specific rules
# LOG: flake8-logging (logging best practices)
# PERF: perflint (performance anti-patterns)
select = ["E", "F", "UP", "B", "SIM", "I", "C901", "N", "A", "C4", "RUF", "LOG", "PERF"]
ignore = []
extend-ignore = ["E501"]  # Line length handled by line-length setting
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Streamlit requires numeric-prefixed filenames for page ordering
"finbot/dashboard/pages/*.py" = ["N999"]
# FastAPI uses Query/Depends in function defaults by design
"web/backend/routers/*.py" = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas_datareader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backtrader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.oauth2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ruptures.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "filterpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dynaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "quantstats.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy_financial.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyportfolioopt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "limits.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nautilus_trader.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "finbot.core.*",
    "finbot.services.execution.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "finbot.services.backtesting.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "finbot.libs.api_manager.*",
    "finbot.libs.logger.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "finbot.services.data_quality.*",
    "finbot.services.health_economics.*",
    "finbot.services.optimization.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "finbot.utils.request_utils.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "finbot.utils.pandas_utils.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "finbot.utils.class_utils.*",
    "finbot.utils.data_collection_utils.alpha_vantage.*",
    "finbot.utils.data_collection_utils.bls.*",
    "finbot.utils.data_collection_utils.fred.*",
    "finbot.utils.data_collection_utils.google_finance.*",
    "finbot.utils.data_collection_utils.pdr.*",
    "finbot.utils.data_collection_utils.scrapers.*",
    "finbot.utils.data_collection_utils.yfinance.*",
    "finbot.utils.data_science_utils.data_analysis.*",
    "finbot.utils.data_science_utils.data_cleaning.*",
    "finbot.utils.data_science_utils.data_transformation.*",
    "finbot.utils.datetime_utils.*",
    "finbot.utils.dict_utils.*",
    "finbot.utils.file_utils.*",
    "finbot.utils.finance_utils.*",
    "finbot.utils.function_utils.*",
    "finbot.utils.json_utils.*",
    "finbot.utils.multithreading_utils.*",
    "finbot.utils.plotting_utils.*",
    "finbot.utils.validation_utils.*",
    "finbot.utils.vectorization_utils.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.mypy]
python_version = "3.12"
exclude = [".venv", "build", "dist"]
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false  # Too noisy for pandas/numpy heavy code
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = false  # Gradual adoption
disallow_any_generics = false  # Too strict for current codebase
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not slow'"
filterwarnings = [
    "ignore::DeprecationWarning:pandas_datareader",
    "ignore::SyntaxWarning:backtrader",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.bandit]
exclude_dirs = ["tests", "./tests/*.py", "*/test_*.py", "*/*_test.py"]

[tool.interrogate]
# Docstring coverage enforcement
# Current coverage: 56.6% (as of 2026-02-12)
# Goal: 80% (gradual improvement)
# Starting threshold set to 55% to allow for minor fluctuations
fail-under = 55.0
exclude = [
    "setup.py",
    "docs",
    "build",
    "dist",
    "notebooks",
    "scripts",
]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-private = false
ignore-property-decorators = false
ignore-regex = ["^test_.*", ".*_test\\.py$"]
ignore-semiprivate = false
# Verbose output for CI
verbose = 1
# Quiet mode (only summary)
quiet = false
# Generate badge
generate-badge = "."
# Badge format
badge-format = "svg"
# Use color in output
color = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
